force-app/main/default/objects/Store_Product_Line__c/Store_Product_Line__c.object-meta.xml
<CustomObject>
    <label>Store Product Line</label>
    <nameField>
        <displayFormat>SPLC-{YYYY}{MM}{0000}</displayFormat>
        <label>Store Product Line Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Product Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>