force-app/main/default/objects/Store_Product_Line__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <formula>CASE( Brand__c , 
&apos;1104&apos;,&apos;TOSHIBA&apos;,
&apos;9916&apos;,&apos;REGZA&apos;,
&apos;5001&apos;,&apos;VIDDA&apos;,
&apos;0003&apos;,&apos;Hisense&apos;,
&apos;1229&apos;,&apos;ASKO&apos;,
&apos;5082&apos;,&apos;ATAG&apos;,
&apos;F023&apos;,&apos;Fridgemaster&apos;,
&apos;G031&apos;,&apos;gorenje&apos;,
&apos;5367&apos;,&apos;HITACHI&apos;,
&apos;0008&apos;,&apos;KELON&apos;,
&apos;1228&apos;,&apos;MORA&apos;,
&apos;5083&apos;,&apos;Pelgrim&apos;,
&apos;U004&apos;,&apos;UPO&apos;,
&apos;5368&apos;,&apos;YORK&apos;,
&apos;4602&apos;,&apos;SHARP&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>