force-app/main/default/objects/Store_Product_Line__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <label>Time Of Exit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>