force-app/main/default/objects/Store_Product_Line__c/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <label>Display Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Display_Type</valueSetName>
    </valueSet>
</CustomField>