force-app/main/default/objects/Store_Product_Line__c/fields/Entering_Status__c.field-meta.xml
<CustomField>
    <fullName>Entering_Status__c</fullName>
    <label>Entering Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entered</fullName>
            </value>
            <value>
                <fullName>Exited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>