force-app/main/default/objects/Store_Product_Line__c/fields/Product_Line_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Code__c</fullName>
    <formula>CASE( Product_Line__c , 
&apos;TV&apos;,&apos;0110&apos;,
&apos;BG-Others&apos;,&apos;0190&apos;,
&apos;Laser TV&apos;,&apos;0150&apos;,
&apos;Commercial display&apos;,&apos;01A0&apos;,
&apos;MP&apos;,&apos;0120&apos;,
&apos;Sound Bar&apos;,&apos;0160&apos;,
&apos;Other&apos;,&apos;0300&apos;,
&apos;Medical utltrasound&apos;,&apos;0401&apos;,
&apos;Smart City&apos;,&apos;0403&apos;,
&apos;AC&apos;,&apos;0200&apos;,
&apos;Refrigerator&apos;,&apos;0202&apos;,
&apos;Freezer&apos;,&apos;0203&apos;,
&apos;WM&apos;,&apos;0204&apos;,
&apos;Small Domestic Home Appliances&apos;,&apos;0205&apos;,
&apos;LCAC&apos;,&apos;2020&apos;,
&apos;Hitachi Commercial AC&apos;,&apos;0207&apos;,
&apos;WineCabi&apos;,&apos;0209&apos;,
&apos;Cooking&apos;,&apos;0210&apos;,
&apos;Dishwasher&apos;,&apos;0211&apos;,
&apos;CF&apos;,&apos;0212&apos;,
&apos;HeatPump&apos;,&apos;0213&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line Code</label>
    <type>Text</type>
</CustomField>