force-app/main/default/objects/Store_Product_Line__c/fields/Stand_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stand_Amount__c</fullName>
    <description>展台数量</description>
    <label>Booth Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>