force-app/main/default/objects/Store_Product_Line__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Store Product Lines</relationshipLabel>
    <relationshipName>Store_Product_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>