force-app/main/default/objects/Store_Product_Line__c/fields/Time_Of_Entry__c.field-meta.xml
<CustomField>
    <fullName>Time_Of_Entry__c</fullName>
    <label>Time Of Entry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>