force-app/main/default/objects/Store_Product_Line__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>HA</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>CTV</fullName>
                <isActive>false</isActive>
                <label>CTV</label>
            </value>
            <value>
                <fullName>WG</fullName>
                <isActive>false</isActive>
                <label>WG</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>