force-app/main/default/objects/Store_Product_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Store__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Type__c</columns>
    <columns>Entering_Status__c</columns>
    <columns>Time_Of_Entry__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Store__c</field>
        <operation>equals</operation>
        <value>Fravega-Panamericana - Ramal Pilar KM 36.5-Tortuguitas</value>
    </filters>
    <label>All</label>
</ListView>